--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,17 @@
 
     <packaging>pom</packaging>
 
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+
+        <scala.binary.version>2.13</scala.binary.version>
+
+        <lagom.version>1.6.0</lagom.version>
+    </properties>
+
     <modules>
+        <module>hello-world-api</module>
+        <module>hello-world-impl</module>
     </modules>
 
     <build>
@@ -17,6 +27,11 @@
             <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
                 <version>3.2.0</version>
+            </plugin>
+            <plugin>
+                <groupId>com.lightbend.lagom</groupId>
+                <artifactId>lagom-maven-plugin</artifactId>
+                <version>1.6.0</version>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -56,14 +71,14 @@
 
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>com.lightbend.lagom</groupId>
+                <artifactId>lagom-maven-dependencies</artifactId>
+                <version>${lagom.version}</version>
+                <scope>import</scope>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-        <scala.binary.version>2.13</scala.binary.version>
-
-        <lagom.version>1.6.0</lagom.version>
-    </properties>
 </project>
